# viivapeli

./: .gitignore  CMakeLists.txt
src/: button.cpp  button.h  coordinates.cpp  coordinates.h  game.cpp  game.h  line.cpp  line.h  main.cpp  main.h  renderer.cpp  renderer.h  widget.cpp  widget.h
